--- a/style.css
+++ b/style.css
@@ -1,113 +1,77 @@
 <style>* {
     box-sizing: border-box;
 }
-
-
 /* Style */
-
 body {
     font-family: Arial;
     margin: 0;
 }
-
-
 /* Header/logo Picture Title */
-
 .header {
     padding: 60px;
     text-align: center;
     background: #1abc9c;
     color: white;
 }
-
-
 /* Style the top navigation bar */
-
 .navbar {
     display: flex;
     background-color: #333;
 }
-
-
 /* Style the navigation bar links */
-
 .navbar a {
     color: white;
     padding: 14px 20px;
     text-decoration: none;
     text-align: center;
 }
-
-
 /* Change color on hover */
-
 .navbar a:hover {
     background-color: #ddd;
     color: black;
 }
-
-
 /* Column container */
-
 .row {
     display: flex;
     flex-wrap: wrap;
 }
-
-
-/* Create two unequal columns that sits next to each other */
-
-
-/* Sidebar/left column */
-
-
+/* Create two columns */
 /* Main column */
-
 .main {
     flex: 70%;
     background-color: white;
     padding: 20px;
 }
-
+/* Sidebar/left column */
 .side {
     flex: 30%;
     align-items: flex-end;
     background-color: #f1f1f1;
     padding: 20px;
 }
-
-
-/* Fake image, just for this example */
-
+/* Fake image - example */
 .fakeimg {
     background-color: #aaa;
     width: 100%;
     padding: 20px;
 }
-
 .media {
     display: flex;
     align-items: flex-start;
 }
-
 .media.flipped {
     flex-direction: row-reverse;
 }
-
 .media .content {
     flex: 1;
     padding: 10px;
 }
-
-
 /* Footer */
-
 .footer {
     padding: 20px;
     text-align: center;
     background: #ddd;
 }
-
 .flex-container {
     padding: 0;
     margin: 0;
@@ -120,7 +84,6 @@ body {
     -webkit-flex-flow: row wrap;
     justify-content: space-around;
 }
-
 .flex-item {
     background: orange;
     padding: 3px;
@@ -133,39 +96,29 @@ body {
     font-size: 1em;
     text-align: center;
 }
-
 .side {
     flex: 1 auto;
 }
-
 .main {
     flex: 3 0px;
 }
-
 .main {
     order: 2;
 }
-
 .side {
     order: 3;
 }
-
 .footer {
     order: 4;
 }
-
 body {
     padding: 2em;
 }
-
-
 /* Responsive layout */
-
 @media screen and (max-width: 800px) {
     .row,
     .navbar {
         flex-direction: column;
     }
 }
-
 </style>
