--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-<style>* {
-    box-sizing: border-box;
-}
+.wrapper {
+                   display: flex;
+                   flex-flow: row wrap;
+                   font-weight: bold;
+                   text-align: center;
+               }
+               
+               .wrapper>* {
+                   padding: 10px;
+                   flex: 1 100%;
+               }
 /* Style */
 body {
     font-family: Arial;
@@ -121,4 +129,3 @@ body {
         flex-direction: column;
     }
 }
-</style>
